# mopsa3DSorterDesignAutomation

./: .gitattributes  .gitignore  Dockerfile  README.md
3dsorter_gen_setting/: gen_3dsorter_setting.m  test_gen_3dsorter_setting.m
cmake/: AddUnitTests.cmake
main/: CMakeLists.txt  evaluate3d.cpp  generate3DSorter.cpp  main3d.cpp
mopsa/: CMakeLists.txt  headerdef.hpp
mopsa/chip/: chip.cpp  chip.hpp  design.cpp  flow.cpp  flow.hpp
mopsa/geometry/: point.cpp  point.hpp
mopsa/logger/: debug.cpp  debug.hpp  def.hpp  logger.cpp  logger.hpp
mopsa/sim/: CMakeLists.txt  def.hpp  particle.cpp  particle.hpp  sim.cpp  sim.hpp  sim3d.cpp  sim_flowgrid.cpp  sim_flowgrid.hpp  sim_setting.cpp  sim_setting.hpp  sim_status.hpp  sim_wall_effect.hpp
mopsa/util/: CMakeLists.txt  reader.cpp  reader.hpp  setting.cpp  setting.hpp
mopsa_auto/3dsorter/: addWaterAsMaterial.m  createBody.m  createFeatures.m  createImage.m  declareGlobalVar.m  genFeaturesFromRecipeReverse.m  link_comsol.m  main_from_given_recipe.m  readRecipe.m  studyAndGetResult.m
scripts/: evaluate3D.sh  plot_3d_monte_carlo_result.py  plot_3d_obstacle_nodes.py  plot_3d_sim_result_vispy.py  plot_feature_distribution.py  plot_ga_score.py  runMopsa3D.sh  runMopsaAuto3DSorter.sh
sim_setting3d/: setting_3D.m  setting_3D_2.m  setting_3D_2_wo_wall.m  setting_3D_wo_wall.m  setting_inertial.m
